split the hour/minutes and keep the Merchant State columns

--- a/data_cleansing.ipynb
+++ b/data_cleansing.ipynb
@@ -360,10 +360,29 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ONLINE    28625\n",
+       "Name: Merchant City, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Since the Merchant State and ZIP Features can be derived from Merchant City and also have a lot of missing values, they can be discarded\n",
-    "df.drop(columns=['Merchant State', 'Zip'], inplace=True)"
+    "# Further inspecting Merchant State based on Merchant City\n",
+    "df.loc[df['Merchant State'].isna(), 'Merchant City'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is clear that Merchant State data is missing because of ONLINE Transactions"
    ]
   },
   {
@@ -372,13 +391,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Format the Time columns\n",
-    "df['Time'] = pd.to_datetime(df['Time'], format='%H:%M').dt.time"
+    "# Fill the missing data with 0\n",
+    "df['Merchant State'].fillna('UNKNOWN', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dropping Zip code since Merchant State and City information available\n",
+    "df.drop(columns=['Zip'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the Time column into Hour and Minutes\n",
+    "df['Hour'] = df['Time'].apply(lambda x: x.split(':')[0])\n",
+    "df['Minutes'] = df['Time'].apply(lambda x: x.split(':')[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove Time columns\n",
+    "df.drop(columns=['Time'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Re-arrange the columns\n",
+    "all_cols = list(df.columns)\n",
+    "all_cols.insert(5,'Hour')\n",
+    "all_cols.insert(6,'Minutes')\n",
+    "del all_cols[-2:]\n",
+    "\n",
+    "df = df[all_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,40 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Encode Use Chip column\n",
-    "use_chip_encoder = LabelEncoder()\n",
-    "df['Use Chip'] = use_chip_encoder.fit_transform(df['Use Chip'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Encode Merchant City column\n",
-    "merchant_city_encoder = LabelEncoder()\n",
-    "df['Merchant City'] = merchant_city_encoder.fit_transform(df['Merchant City'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Encode isFraud column\n",
-    "isFraud_encoder = LabelEncoder()\n",
-    "df['isFraud'] = isFraud_encoder.fit_transform(df['isFraud'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -461,11 +493,13 @@
        "      <th>Year</th>\n",
        "      <th>Month</th>\n",
        "      <th>Day</th>\n",
-       "      <th>Time</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Minutes</th>\n",
        "      <th>Amount</th>\n",
        "      <th>Use Chip</th>\n",
        "      <th>Merchant Name</th>\n",
        "      <th>Merchant City</th>\n",
+       "      <th>Merchant State</th>\n",
        "      <th>MCC</th>\n",
        "      <th>isFraud</th>\n",
        "    </tr>\n",
@@ -478,13 +512,15 @@
        "      <td>2019</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>13:05:00</td>\n",
+       "      <td>13</td>\n",
+       "      <td>05</td>\n",
        "      <td>51.94</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Online Transaction</td>\n",
        "      <td>5531</td>\n",
-       "      <td>2152</td>\n",
+       "      <td>ONLINE</td>\n",
+       "      <td>UNKNOWN</td>\n",
        "      <td>4814</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -493,13 +529,15 @@
        "      <td>2019</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>13:57:00</td>\n",
+       "      <td>13</td>\n",
+       "      <td>57</td>\n",
        "      <td>18.85</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Chip Transaction</td>\n",
        "      <td>1023</td>\n",
-       "      <td>637</td>\n",
+       "      <td>Corona</td>\n",
+       "      <td>NY</td>\n",
        "      <td>7538</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -508,13 +546,15 @@
        "      <td>2019</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>18:43:00</td>\n",
+       "      <td>18</td>\n",
+       "      <td>43</td>\n",
        "      <td>62.36</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Chip Transaction</td>\n",
        "      <td>1710</td>\n",
-       "      <td>1633</td>\n",
+       "      <td>Little Neck</td>\n",
+       "      <td>NY</td>\n",
        "      <td>5812</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -523,13 +563,15 @@
        "      <td>2019</td>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>15:33:00</td>\n",
+       "      <td>15</td>\n",
+       "      <td>33</td>\n",
        "      <td>230.07</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Chip Transaction</td>\n",
        "      <td>5840</td>\n",
-       "      <td>1633</td>\n",
+       "      <td>Little Neck</td>\n",
+       "      <td>NY</td>\n",
        "      <td>5300</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -538,35 +580,37 @@
        "      <td>2019</td>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>18:57:00</td>\n",
+       "      <td>18</td>\n",
+       "      <td>57</td>\n",
        "      <td>63.75</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Chip Transaction</td>\n",
        "      <td>895</td>\n",
-       "      <td>1633</td>\n",
+       "      <td>Little Neck</td>\n",
+       "      <td>NY</td>\n",
        "      <td>5814</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   User  Card  Year  Month  Day      Time  Amount  Use Chip  Merchant Name  \\\n",
-       "0     1     1  2019      1    1  13:05:00   51.94         1           5531   \n",
-       "1     1     1  2019      1    3  13:57:00   18.85         0           1023   \n",
-       "2     1     1  2019      1    4  18:43:00   62.36         0           1710   \n",
-       "3     1     1  2019      1    5  15:33:00  230.07         0           5840   \n",
-       "4     1     1  2019      1    5  18:57:00   63.75         0            895   \n",
+       "   User  Card  Year  Month  Day Hour Minutes  Amount            Use Chip  \\\n",
+       "0     1     1  2019      1    1   13      05   51.94  Online Transaction   \n",
+       "1     1     1  2019      1    3   13      57   18.85    Chip Transaction   \n",
+       "2     1     1  2019      1    4   18      43   62.36    Chip Transaction   \n",
+       "3     1     1  2019      1    5   15      33  230.07    Chip Transaction   \n",
+       "4     1     1  2019      1    5   18      57   63.75    Chip Transaction   \n",
        "\n",
-       "   Merchant City   MCC  isFraud  \n",
-       "0           2152  4814        0  \n",
-       "1            637  7538        0  \n",
-       "2           1633  5812        0  \n",
-       "3           1633  5300        0  \n",
-       "4           1633  5814        0  "
+       "   Merchant Name Merchant City Merchant State   MCC isFraud  \n",
+       "0           5531        ONLINE        UNKNOWN  4814      No  \n",
+       "1           1023        Corona             NY  7538      No  \n",
+       "2           1710   Little Neck             NY  5812      No  \n",
+       "3           5840   Little Neck             NY  5300      No  \n",
+       "4            895   Little Neck             NY  5814      No  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
