--- a/data_cleansing.ipynb
+++ b/data_cleansing.ipynb
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fill the missing data with 0\n",
+    "# Fill the missing data with 'UNKNOWN'\n",
     "df['Merchant State'].fillna('UNKNOWN', inplace=True)"
    ]
   },
